argocd/environments/prod/clus1/overlays/galaxy/content-timeout-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: galaxy-content
spec:
  template:
    spec:
      containers:
        - name: content
          readinessProbe:
            timeoutSeconds: 30
